--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="peterbliss.twitterburrito.activities.SplashActivity">
+    tools:context="peterbliss.twitterburrito.SplashActivity">
 
 </RelativeLayout>
