--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,4 +7,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="peterbliss.twitterburrito.SplashActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="196dp"
+        android:background="@drawable/splashtwitterburrito" />
 </RelativeLayout>
