--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -7,4 +7,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="peterbliss.twitterburrito.FavoritesActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/noFavortiesLogo"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/nofavorites" />
 </RelativeLayout>
