Setup the favorite system Including - the layout for favorite - setup of the favorite graphics - changes to the keyword fragment to support loading favorite data

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="textDark">#000000</color>
     <color name="textGreyBlue">#7a8790</color>
+    <color name="headerbar">#79b5fe</color>
 </resources>
