--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_above="@+id/openFavorites">
+        android:layout_above="@+id/openFavorites"
+        android:focusableInTouchMode="true">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable"
-            android:background="#79b5fe" />
+            android:background="@color/headerbar" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
