--- a/app/src/main/res/layout/tweet_card.xml
+++ b/app/src/main/res/layout/tweet_card.xml
@@ -1,127 +1,123 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="peterbliss.twitterburrito.TweetFragment">
+<!-- A CardView that contains a TextView -->
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    android:layout_margin="6dp"
+    card_view:cardUseCompatPadding="true"
+    >
 
-    <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp"
-        android:layout_margin="6dp"
-        card_view:cardUseCompatPadding="true"
-        >
+        android:layout_height="match_parent">
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:scaleType="fitXY"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Name"
+            android:id="@+id/name"
+            android:layout_alignTop="@+id/thumbnail"
+            android:layout_toEndOf="@+id/thumbnail"
+            android:layout_marginStart="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/textDark" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Name"
-                android:id="@+id/name"
-                android:layout_alignTop="@+id/thumbnail"
-                android:layout_toEndOf="@+id/thumbnail"
-                android:layout_marginStart="15dp"
-                android:textStyle="bold"
-                android:textColor="@color/textDark" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="\@screen_name"
+            android:id="@+id/screen_name"
+            android:textColor="@color/textGreyBlue"
+            android:layout_below="@+id/name"
+            android:layout_alignStart="@+id/name" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="\@screen_name"
-                android:id="@+id/screen_name"
-                android:textColor="@color/textGreyBlue"
-                android:layout_below="@+id/name"
-                android:layout_alignStart="@+id/name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Text"
+            android:id="@+id/text"
+            android:textColor="@color/textDark"
+            android:layout_below="@+id/screen_name"
+            android:layout_marginTop="20dp"
+            android:layout_alignStart="@+id/thumbnail" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Text"
-                android:id="@+id/text"
-                android:textColor="@color/textDark"
-                android:layout_below="@+id/screen_name"
-                android:layout_marginTop="20dp"
-                android:layout_alignStart="@+id/thumbnail" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="created_at"
+            android:id="@+id/created_at"
+            android:textColor="@color/textGreyBlue"
+            android:layout_below="@+id/text"
+            android:layout_marginTop="5dp"
+            android:layout_alignStart="@+id/text" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="created_at"
-                android:id="@+id/created_at"
-                android:textColor="@color/textGreyBlue"
-                android:layout_below="@+id/text"
-                android:layout_marginTop="5dp"
-                android:layout_alignStart="@+id/text" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/retweetCountIcon"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/retweetcount"
+            android:layout_below="@+id/created_at"
+            android:layout_marginLeft="5dp"
+             />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/retweetCountIcon"
-                android:layout_marginTop="18dp"
-                android:background="@drawable/retweetcount"
-                android:layout_below="@+id/created_at"
-                android:layout_marginLeft="5dp"
-                 />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="retweet_count"
+            android:id="@+id/retweet_count"
+            android:textColor="@color/textGreyBlue"
+            android:layout_alignTop="@+id/retweetCountIcon"
+            android:layout_toEndOf="@+id/retweetCountIcon" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="retweet_count"
-                android:id="@+id/retweet_count"
-                android:textColor="@color/textGreyBlue"
-                android:layout_alignTop="@+id/retweetCountIcon"
-                android:layout_toEndOf="@+id/retweetCountIcon" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/favoriteCountIcon"
+            android:layout_alignTop="@+id/retweet_count"
+            android:layout_toEndOf="@+id/retweet_count"
+            android:layout_marginStart="19dp"
+            android:background="@drawable/favoritecount"
+            android:baselineAlignBottom="false" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/favoriteCountIcon"
-                android:layout_alignTop="@+id/retweet_count"
-                android:layout_toEndOf="@+id/retweet_count"
-                android:layout_marginStart="19dp"
-                android:background="@drawable/favoritecount"
-                android:baselineAlignBottom="false" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="favorite_count"
+            android:id="@+id/favorite_count"
+            android:textColor="@color/textGreyBlue"
+            android:layout_alignTop="@+id/favoriteCountIcon"
+            android:layout_toEndOf="@+id/favoriteCountIcon"
+            android:layout_marginLeft="5dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="favorite_count"
-                android:id="@+id/favorite_count"
-                android:textColor="@color/textGreyBlue"
-                android:layout_alignTop="@+id/favoriteCountIcon"
-                android:layout_toEndOf="@+id/favoriteCountIcon"
-                android:layout_marginLeft="5dp"/>
-
-            <ToggleButton
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:id="@+id/favoriteTweetToggle"
-                android:background="@drawable/favoritebutton"
-                android:layout_below="@+id/favorite_count"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="14dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:textOn=""
-                android:textOff=""/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+        <ToggleButton
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:id="@+id/favoriteTweetToggle"
+            android:background="@drawable/favoritebutton"
+            android:layout_below="@+id/favorite_count"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="14dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:textOn=""
+            android:textOff=""/>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
